<resources>
    <string name="app_name">Alerticon</string>
    <string name="time_tab_text">Weckzeit</string>
    <string name="data_tab_text">Daten</string>
    <string name="settings_tab_text">Einstellungen</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="time_tab_image_desc">Time Tab Image</string>
    <string name="data_tab_image_desc">Data Tab Image</string>
    <string name="settings_tab_image_desc">Settings Tab Image</string>
    <string name="time_placeholder">Time</string>
    <string name="day_placeholder">Day</string>
    <string name="repeat_placeholder">repeat</string>
    <string name="time_input_hint">08:00</string>
    <string name="repeat_input_label_text">Repeat:</string>
    <string name="time_input_label_text">Time:</string>
    <string name="add_time_button_desc">apply new alert</string>
</resources>