<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:padding="5dp"
        android:layout_margin="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_alignParentStart="true">

        <ImageButton
            android:id="@+id/time_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/time_tab_image_desc"
            android:padding="15dp"
            app:srcCompat="@drawable/ic_time_tab_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/data_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/data_tab_image_desc"
            android:padding="15dp"
            app:srcCompat="@drawable/ic_data_tab_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/settings_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/settings_tab_image_desc"
            android:padding="15dp"
            app:srcCompat="@drawable/ic_settings_tab_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/mViewPager"
        android:paddingTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>