<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardPreventCornerOverlap="false"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:id="@+id/container1"
            android:background="@color/colorPrimaryDark"
            >

            <TextView
                android:id="@+id/time_time"
                android:layout_width="265dp"
                android:layout_height="21dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:text="@string/time_placeholder"
                android:textColor="@color/colorAccent"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/time_checkBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/time_day"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/day_placeholder"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/time_repeat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time_time" />

            <TextView
                android:id="@+id/time_repeat"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/repeat_placeholder"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/time_checkBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time_time" />

            <CheckBox
                android:id="@+id/time_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>